setup eslint and sequelize

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="A platform for collaboration between developers. Lets build awesome apps together."
+      content="A platform for collaboration between developers. Build awesome apps together."
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
