--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,11 +10,7 @@
       content="A platform for collaboration between developers. Build awesome apps together."
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600&display=swap"
+      href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700&display=swap"
       rel="stylesheet"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
