add titles to pages

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="A platform for collaboration between developers. Build awesome apps together."
+      content="Collaborate with other developers from all over the world and build awesome Apps together!"
     />
     <link
       href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700&display=swap"
